Vote-1137: Fix spacing for UL on basics block (#685)

--- a/web/themes/custom/votegov/src/sass/components/basics-block.scss
+++ b/web/themes/custom/votegov/src/sass/components/basics-block.scss
@@ -76,6 +76,10 @@
     @include u-margin-top(5);
   }
 
+  ul {
+    @include u-margin-y(2);
+  }
+
   @include at-media('tablet') {
     @include u-padding(4);
   }
